<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">
    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/li_item_iv_image"
                android:layout_width="96dp"
                android:src="@drawable/placeholder_img"
                android:layout_height="96dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/li_item_tv_name"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/li_item_iv_image"
                android:textSize="18sp"
                android:text="ITEM NAME"/>

            <LinearLayout
                android:layout_toRightOf="@+id/li_item_iv_image"
                android:layout_below="@+id/li_item_tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:weightSum="8"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/li_initial_price_label"
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"/>
                    <TextView
                        android:id="@+id/li_item_tv_initial_price"
                        android:text="US$ 0.0"
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:weightSum="8"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/li_item_current_price_label"
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"/>
                    <TextView
                        android:id="@+id/li_item_tv_current_price"
                        android:textColor="#FF0000"
                        android:text="US$ 0.0"
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:weightSum="8"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/li_item_expires_in_label"
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"/>
                    <TextView
                        android:id="@+id/li_item_tv_expires_in"
                        android:text="10:00"
                        android:textColor="#000000"
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:weightSum="8"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/li_item_status_label"
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"/>
                    <TextView
                        android:id="@+id/li_item_tv_status"
                        android:text="Bidding"
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>